# gener_auth_code

./: CMakeLists.txt
src/: main.cpp  pdd_auth_code.cpp  pdd_auth_code.h  pdd_auth_code.qrc  pdd_auth_code.ui
